# Bachata-S4

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  NOTICE.android-runtime.md  README.md  fdroidbuild.md
.commandcode/taste/: taste.md
.github/workflows/: build.yml
android/: README.md
android/BachataS4/: build-and-install.sh  gradle.properties  pull-session-logs.sh  settings.gradle.kts  version.properties
android/BachataS4/core/runtime/src/main/cpp/: CMakeLists.txt  custom_vulkan_bridge.cpp
android/BachataS4/core/runtime/src/main/cpp/winlator/include/: string_utils.h
android/BachataS4/core/runtime/src/main/cpp/winlator/src/: gpu_image.c  sysvshared_memory.c  xconnector_epoll.c
build-tests/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  TracyTargets.cmake  build.ninja  cmake_install.cmake  cmake_test_discovery_3f5e53f2fc.json
build-tests/tests/: CTestTestfile.cmake  cmake_install.cmake  shadps4_bachata_runtime_test[1]_include.cmake  shadps4_bachata_runtime_test[1]_tests.cmake  shadps4_gcn_test[1]_include.cmake  shadps4_http_test[1]_include.cmake  shadps4_settings_test[1]_include.cmake
design/: DESIGN.md  controller.html
design/game_library/: code.html  screen.png:Zone.Identifier
design/settings/: code.html
design/theatrical_console_system/: DESIGN.md
docs/: bin-pkg-migration.md
docs/bloodborn-renderingissue/: analysis.md
docs/plans/: 2026-07-07-box64-native-write-faults.md
documents/: android-building.md  play-bundled-turnip.md
runtime/locks/: components.lock.json  debian-runtime-packages.json  runtime-inputs.lock.json  winlator-vendor.sha256
runtime/patches/: box64-adrenotools-vulkan.patch  box64-bachata-thread-affinity.patch  box64-cxa-quick-exit.patch  box64-native-write-opcode.patch  box64-vex-write-opcode.patch  box64-vulkan-dispatch-tile-qcom.patch  box64-winlator-glibc-entrypoint.patch  fex-fexcore-only.patch  sdl3-winlator-x11.patch
runtime/probes/: audio-tone.c  fexcore-guest-harness.cpp  fexcore-smoke.cpp  hello.c  sdl-window.cpp  vulkan-info.cpp
runtime/qualification/: create-fex-phase0-evidence.mjs  create-fex-phase1-evidence.mjs  fex-phase0-schema.json  fex-phase1-schema.json  qualification-schema.json  run-bloodborne-fex-first-room.sh  run-fexcore-guest-harness.sh  run-fexcore-smoke.sh  run-qualification.sh  validate-bloodborne-fex-first-room.mjs
runtime/scripts/: build-box64-host.sh  build-box64.sh  build-fexcore-smoke-aarch64.sh  build-runtime-debian.sh  build-shadps4-arm64.sh  build-shadps4-x86_64.sh  build-turnip.sh  checkout-component.sh  fetch-runtime-inputs.mjs  generate-android-settings-catalog.mjs  install-debian-runtime-deps.sh  install-host-jnilibs.mjs  package-runtime.mjs  stage-debian-runtime.mjs  vendor-winlator.sh
runtime/settings/: android-setting-metadata.json
runtime/tests/: android-direct-launch-source.test.mjs  arm64-srt-walker-source.test.mjs  bachata-input-backend.test.mjs  bachata-present-format.test.mjs  bloodborne-fex-regression.test.mjs  bloodborne-fex-signal-source.test.mjs  bloodborne-fex-validation-cache-source.test.mjs  box64-source-provisioning.test.mjs  build-box64-host-cache.test.mjs  build-fexcore-smoke-cleanup-source.test.mjs  checkout-component-cleanliness.test.mjs  create-fex-phase0-evidence.test.mjs  fex-arm64-debian-deps-source.test.mjs  fex-arm64-font-tool-source.test.mjs  fex-arm64-shadps4-build-source.test.mjs  fex-arm64-signal-context-source.test.mjs  fex-guest-cpu-source.test.mjs  fex-guest-engine-source.test.mjs  fex-guest-entry-source.test.mjs  fex-hle-veneer-source.test.mjs  fex-phase0-evidence.test.mjs  fex-phase1-evidence.test.mjs  fex-sonic-guest-backend-source.test.mjs  fex-sonic-runtime-source.test.mjs  fexcore-callret-stack-source.test.mjs  fexcore-ci-source.test.mjs  (+25 more)
src/: emulator.cpp  emulator.h  main.cpp  sdl_window.cpp
src/imgui/renderer/: CMakeLists.txt  imgui_impl_vulkan.cpp  imgui_memory.h
tests/: CMakeLists.txt
(+325 files in other folders)
